--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,78 @@
 
+
+body {
+    background-image: url('../images/background3.jpg') ; 
+    background-size: 55%;  
+    margin: 0;
+    padding: 0;
+    font-family:  "Segoe UI", Roboto, Ubuntu, Cantarell, sans-serif;
+}
+
+h1 {
+    font-weight: bold;
+    font-size: 60px;
+    line-height: 1em;
+    text-align: center;
+}
+
+p {
+    margin-top: 2%;
+    text-align: center;
+    font-size: 25px;
+    color: rgb(58, 53, 53);
+    font-weight: lighter;
+}
+
+form {
+    background-color: #f2f2f2;
+    padding: 50px; 
+    border-radius: 10px;
+    height: 400px;
+    width:280px; 
+    margin-top: 10%; 
+    margin-bottom: 10%;
+    margin-left: 30%;
+}
+
+input[type="email"] {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+label[for="email"] {
+    font-size: 20px; 
+}
+
+
+form input[type="submit"] {
+    font-size: 15px;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    background-color: #f6c7dd;
+    border: none;
+    border-bottom: 1px solid #cccccc;
+    box-sizing: border-box;
+    color:white;
+    
+}
+
+input[type="submit"]:hover {
+    background-color: #efaaca;
+}
+
+label[for="age-verification"] {
+    font-size: 15px;
+    display: inline;
+    margin-left: 10px;
+}
+form ol {
+    list-style: none;
+    padding: 0;
+}
+li {
+    margin: 0 auto; 
+    max-width: 200px;
+}
