--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,17 @@ li {
     margin: 0 auto; 
     max-width: 200px;
 }
+
+@media screen and (min-width: 768px) {
+
+}
+
+
+@media screen and (min-width: 1024px) {
+
+}
+@media screen and (max-width: 767px) {
+    input[type="email"] {
+        width: 90%;
+    }
+}
