--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,16 @@
 
 body {
     background-image: url('../images/background3.jpg') ; 
-    background-size: 55%;  
+    background-repeat: no-repeat;  
+    background-size: cover;
+    background-position: center;
     margin: 0;
     padding: 0;
     font-family:  "Segoe UI", Roboto, Ubuntu, Cantarell, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    height: 100vh;
 }
 
 h1 {
@@ -24,19 +30,17 @@ p {
 }
 
 form {
-    background-color: #f2f2f2;
-    padding: 50px; 
+    background-color: rgba(242, 242, 242, 0.8);;
+    padding: 20px; 
     border-radius: 10px;
-    height: 400px;
-    width:280px; 
-    margin-top: 10%; 
-    margin-bottom: 10%;
-    margin-left: 30%;
+    max-width: 400px; 
+    margin-top: 0 auto;
+    margin: 0 auto; 
 }
 
 input[type="email"] {
     width: 100%;
-    padding: 10px;
+    padding: 8px;
     margin: 10px 0;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -51,7 +55,7 @@ form input[type="submit"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
-    background-color: #f6c7dd;
+    background-color: #f7b3d2;
     border: none;
     border-bottom: 1px solid #cccccc;
     box-sizing: border-box;
